<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <GVL Name="GVL_COMMAND_FROM_UI" Id="{9f013859-64d7-4224-a2fe-26017a9ae22d}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	
	//GVL_IO.aOutputCmd[1].
	
	CMD_HEATER_MAIN_MC_ON:BOOL;  //[1].0
	CMD_THERMAL_BACH_MC_ON:BOOL;//[1].1
	CMD_VACUUM_PUMP_MC_ON:BOOL;//[1].2
	CMD_LINE_HEATER_MC_ON:BOOL;//[1].3
	CMD_SPARE_1_4:BOOL;//[1].4
	CMD_SPARE_1_5:BOOL;//[1].5
	CMD_VACUUM_PUMP_ON:BOOL;//[1].6
	CMD_VACUUM_PUMP_RESET:BOOL;//[1].7
	CMD_ROTATION_START:BOOL;//[1].8
	CMD_ROTATION_RESET:BOOL;//[1].9
	CMD_MAIN_POWER_RESET:BOOL;//[1].10
	
	CMD_E3508_MAN_AUTO:BOOL;//[1].11
	CMD_THROTTLE_PRESSURE_POSITION_MODE:BOOL;//[1].12
	CMD_THROTTLE_OUTPUT_MODE:USINT;//[2]	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>